# cgol

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  app.cpp  cgol  cgol.cbp  cgol.md  cgol.pro  cgolQApp.cpp  cgolQWidget.cpp  cgolQWidget.h  cmake_install.cmake  dragonskeep.cpp  dragonskeep.h  duloc.cpp  farfaraway.cpp  farfaraway.h  save.json  widget.cpp  widget.h
cgol_autogen/: mocs_compilation.cpp
cgol_autogen/EWIEGA46WW/: moc_cgolQWidget.cpp.d  moc_widget.cpp.d
